# copyxpaste

./: .gitignore  CMakeLists.txt  README.md
distribution/unix/: copyxpaste  install.sh
distribution/win/: install.bat
include/copyxpaste/: clip_message.hpp  connection_pool.h  cxp_client.h  cxp_engine.h  cxp_server.h  tcp_connection.h
src/: main.cpp
src/core/: connection_pool.cpp  cxp_client.cpp  cxp_engine.cpp  cxp_server.cpp  tcp_connection.cpp
